# cloud-ru-hackathon

./: .env.example  .gitignore  README.md  docker-compose.yml  pyvenv.cfg
Scripts/: activate  activate.bat
mcp_bitrix24/: .env.example  Dockerfile  pyproject.toml
mcp_bitrix24/src/: b24.py  main.py  mcp_instance.py  tools.py  utils.py
mcp_call_processor/: .env.example  Dockerfile  pyproject.toml  tools.py
mcp_call_processor/src/: main.py  mcp_instance.py  tools.py  utils.py
mcp_checklist_manager/: .env.example  checklists_db  config.py  database.py  main.py  mcp_instance.py  metrics.py  models.py  requirements.txt  test_tools.py  tools.py  utils.py
